2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py (Page._init_widgets): Put the tab widget in an
	event box to be able to recieve events.

	* gaupol/gtk/agents/menu.py
	(MenuAgent.on_page_tab_widget_button_press_event):  Activate the page,
	whose tab was right-clicked.

2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/*:
	* data/ui/ui.xml:
	* gaupol/*:
	Rename dialogue lines to dialogue dashes.

2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/preferences.py (PreferencesDialog.__init__): Add
	argument parent and make the dialog transient for that.

	* data/glade/dialogs/preferences.glade: Center on parent.

2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (View): Fix subtitle number search after subtitle
	removals or inserts.

2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/view.py (ViewAgent._toggle_column): Autosize
	columns after changing visibility.

2008-08-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/transform.py: Gray out the current position
	entries to signal that they are not editable.

2008-08-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/preview.py (PreviewAgent._handle_output): Add
	command to the beginning of the output.

2008-08-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/errors.py (ProcessError): New error class.

	* gaupol/util.py (start_process): Raise gaupol.ProcessError instead of
	OSError if something goes wrong.

	* gaupol/agents/preview.py (PreviewAgent.preview): Raise
	gaupol.ProcessError instead of OSError if unable to start process.

	* gaupol/gtk/agents/preview.py (PreviewAgent.preview): Handle
	gaupol.ProcessError. Fixes #518981.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/paths.py (get_py2exe_directory): Fix.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (browse_url): Don't try 'start' on Windows.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>
