@@ -1,3 +1,8 @@
+2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/gtk/page.py (Page._get_tab_close_button): Possibly fix cropped
+	tab close buttons on Windows.
+
 2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/page.py (Page._init_widgets): Put the tab widget in an
